[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/assets/LoginReg page.png" type="Texture" id=1]
[ext_resource path="res://UI/Options.gd" type="Script" id=2]
[ext_resource path="res://Inventory/Fonts/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.145098, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[node name="Options" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Control" type="Control" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 2, 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 8.0
margin_top = 8.0
margin_right = 336.0
margin_bottom = 352.0
custom_constants/separation = 10

[node name="Fullscreen" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 341.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Fullscreen"]
margin_top = 13.0
margin_right = 111.0
margin_bottom = 27.0
text = "Toggle Fullscreen"

[node name="CheckButton" type="CheckButton" parent="Control/VBoxContainer/Fullscreen"]
margin_left = 115.0
margin_right = 191.0
margin_bottom = 40.0

[node name="VSync" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 50.0
margin_right = 341.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="Control/VBoxContainer/VSync"]
margin_top = 13.0
margin_right = 82.0
margin_bottom = 27.0
text = "Toggle VSync"

[node name="CheckButton" type="CheckButton" parent="Control/VBoxContainer/VSync"]
margin_left = 86.0
margin_right = 162.0
margin_bottom = 40.0
pressed = true

[node name="Battery" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 100.0
margin_right = 341.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Battery"]
margin_top = 13.0
margin_right = 130.0
margin_bottom = 27.0
text = "Battery Saving Mode"

[node name="CheckButton" type="CheckButton" parent="Control/VBoxContainer/Battery"]
margin_left = 134.0
margin_right = 210.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 150.0
margin_right = 341.0
margin_bottom = 150.0

[node name="Sound" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 160.0
margin_right = 341.0
margin_bottom = 176.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Control/VBoxContainer/Sound"]
margin_top = 1.0
margin_right = 92.0
margin_bottom = 15.0
text = "Sound Volume"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/Sound"]
margin_left = 100.0
margin_right = 325.0
margin_bottom = 16.0
rect_min_size = Vector2( 225, 0 )
min_value = -50.0
max_value = 20.0
scrollable = false
tick_count = 8

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 186.0
margin_right = 341.0
margin_bottom = 308.0
custom_constants/margin_top = 122

[node name="Back" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 318.0
margin_right = 341.0
margin_bottom = 338.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/Back"]
margin_right = 234.0
margin_bottom = 20.0
custom_constants/margin_right = 234

[node name="Credits" type="Button" parent="Control/VBoxContainer/Back"]
margin_left = 238.0
margin_right = 295.0
margin_bottom = 20.0
text = "Credits"

[node name="Back" type="Button" parent="Control/VBoxContainer/Back"]
margin_left = 299.0
margin_right = 341.0
margin_bottom = 20.0
text = "Back"

[node name="WindowDialog" type="WindowDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -50.0
margin_right = 78.0
margin_bottom = 51.0
rect_scale = Vector2( 2, 2 )
window_title = "Credits"

[node name="RichTextLabel" type="RichTextLabel" parent="Control/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -1.0
custom_fonts/normal_font = SubResource( 1 )
text = "Lead Developer:
	Kang Wenhan
	Ng Shi Jun
Developed on behalf
of NUS Orbital 2022

Â© NUS Orbital 2022

Assets used:
	Pipoya RPG Tileset
	Pipoya RPG Character 
	Sprites
	Arkeve Inventory 
	Assets"

[connection signal="toggled" from="Control/VBoxContainer/Fullscreen/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/VSync/CheckButton" to="." method="_on_CheckButton_toggled_VSync"]
[connection signal="toggled" from="Control/VBoxContainer/Battery/CheckButton" to="." method="_on_CheckButton_toggled_battery"]
[connection signal="value_changed" from="Control/VBoxContainer/Sound/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Control/VBoxContainer/Back/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Back/Back" to="." method="_on_Back_pressed"]
